@startuml QuackstagramERD
entity "User" as user {
  + username : String
  --
  bio : String
  password : String
  postsCount : Integer
  followersCount : Integer
  followingCount : Integer
}

entity "Post" as post {
  + imagePath : String
  --
  caption : String
  likesCount : Integer
}

entity "PostLike" as postlike {
  + user : User
  --
  post : Post
}

entity "Follow" as follow {
  + user : User
  --
  target : User
}

entity "Notification" as notification {
  + user : User
  --
  target : User
  post : Post
  date : Date
  time : Time
}

user "1" -- "0..*" post
user "1" -- "0..*" postlike
user "1" -- "0..*" follow
user "1" -- "0..*" notification
notification "1" -- "1" post
post "1" -- "0..*" postlike
@enduml